# c-therm-tci

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .renovaterc.json  CHANGELOG.md  README.md  lock.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  feature-request.yaml  ideas-for-docs.yaml
.github/workflows/: ci.yml  contrib.yml  docs.yml  high.yml  release.yml
changelog/: towncrier_template.md.jinja
docs/: conf.py  index.md  pdf.md  pyproject.toml  tutorial.md
example/: data.xlsx
requirements/: dev.in  uv.in
scripts/: Sync-Py.ps1  pyproject.toml
scripts/c_therm_tci_tools/: __main__.py  sync.py
src/: c_therm_tci.py
src/c_therm_tci/: __init__.py
tests/: pyproject.toml
