[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "c_therm_tci_tools"
version = "0.0.0"
description = "Tools."
dependencies = ["cyclopts==2.6.1"]
[project.scripts]
"c_therm_tci_tools" = "c_therm_tci_tools.__main__:main"

[tool.fawltydeps]
deps = ["scripts/pyproject.toml"]
code = ["scripts/c_therm_tci_tools"]
ignore_undeclared = [
    "c_therm_tci_docs",
    "c_therm_tci_tests",
    "c_therm_tci_tools",
    "c_therm_tci",
]
